gobmkida/c1/do_find_superstring
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_find_superstring/src/engine/utils.c:2018:7: error: conflicting types for 'do_find_superstring'
void  do_find_superstring( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_find_superstring/src/engine/utils.c:1417:1: note: previous declaration is here
do_find_superstring(int str, int *num_stones, int *stones,
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_find_superstring/src/engine/utils.c:2304:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v41 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v39); 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/do_find_superstring/src/obj/1/utils.o] Error 1
